--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -6,170 +6,121 @@
     android:layout_height="match_parent"
     tools:context=".AccountActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/personal_info_labe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="230dp"
-        android:fontFamily="serif"
-        android:text="Personal Info"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-
-    <TextView
-        android:id="@+id/accountName_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="170dp"
-        android:layout_marginTop="180dp"
-        android:fontFamily="serif"
-        android:text="Jane Doe"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/payment_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="280dp"
-        android:fontFamily="serif"
-        android:text="Payment Methods"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/membership_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="330dp"
-        android:fontFamily="serif"
-        android:text="Membership Info"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/account_login_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="380dp"
-        android:fontFamily="serif"
-        android:text="Account Login"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/account_security_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="430dp"
-        android:fontFamily="serif"
-        android:text="Account Security"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/help_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="480dp"
-        android:fontFamily="serif"
-        android:text="Help Center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/account_label" />
-
-    <ImageView
-        android:id="@+id/imageView5"
+    <!--fragment layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="172dp"
-        android:src="@drawable/user__1_"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="10"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.277" />
+        android:layout_height="match_parent"
+        android:background="#2196F3">
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="220dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/user__1_"
+            app:layout_constraintBottom_toTopOf="@+id/accountName_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="#D0142770"></ImageView>
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="270dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+        <RelativeLayout
+            android:id="@+id/widget_tracker"
+            android:layout_width="match_parent"
+            android:layout_height="485dp"
+            android:layout_marginTop="250dp"
+            android:background="@drawable/home_dashboard_back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView5"
+            app:layout_constraintVertical_bias="1.0">
 
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="320dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+            <TextView
+                android:id="@+id/acc_row1_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="45dp"
+                android:text="@string/acc_row1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
 
-    <View
-        android:id="@+id/divider4"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="370dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+            <TextView
+                android:id="@+id/acc_row2_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/acc_row1_label"
+                android:layout_alignStart="@+id/acc_row1_label"
+                android:layout_marginTop="25dp"
+                android:text="@string/acc_row2"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
 
-    <View
-        android:id="@+id/divider5"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="420dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+            <TextView
+                android:id="@+id/acc_row4_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/acc_row3_label"
+                android:layout_alignStart="@+id/acc_row3_label"
+                android:layout_marginTop="25dp"
+                android:text="@string/acc_row4"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
 
-    <View
-        android:id="@+id/divider6"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="470dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="#BC5E5E" />
+            <TextView
+                android:id="@+id/acc_row5_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/acc_row4_label"
+                android:layout_alignStart="@+id/acc_row4_label"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="25dp"
+                android:text="@string/acc_row5"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
 
+            <TextView
+                android:id="@+id/acc_row6_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/acc_row5_label"
+                android:layout_alignStart="@+id/acc_row5_label"
+                android:layout_marginTop="25dp"
+                android:text="@string/acc_row6"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/acc_row3_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/acc_row2_label"
+                android:layout_alignStart="@+id/acc_row2_label"
+                android:layout_marginTop="25dp"
+                android:text="@string/acc_row3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:visibility="visible" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/accountName_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jane Doe"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5"
+            tools:visibility="visible" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
