--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,14 +20,12 @@
             android:id="@+id/home_widget_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
-            android:layout_marginStart="42dp"
             android:text="@string/home_widget_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/search_bar"
-            />
+            android:layout_marginStart="35dp" />
 
         <RelativeLayout
             android:id="@+id/search_bar"
@@ -79,6 +77,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="5dp"
+                android:background="#ADBF2F2F"
                 app:cardCornerRadius="28dp"
                 app:cardElevation="2dp">
 
@@ -110,39 +109,36 @@
                     android:text="@string/widget_heading2"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                     android:textColor="#000000"
-                    android:textSize="20sp"></TextView>
-
-
+                    android:textSize="20sp">
+                </TextView>
             </androidx.cardview.widget.CardView>
-
         </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/guide_background"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="220dp"
-                android:background="@drawable/home_dashboard_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/home_widget_title"
-                app:layout_constraintVertical_bias="1.0">
+        <RelativeLayout
+            android:id="@+id/guide_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="220dp"
+            android:background="@drawable/home_dashboard_back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_widget_title"
+            app:layout_constraintVertical_bias="1.0">
 
-                <RelativeLayout
-                    android:id="@+id/widget_background"
+            <RelativeLayout
+                android:id="@+id/widget_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginBottom="80dp"
-                        />
-                </RelativeLayout>
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="80dp" />
             </RelativeLayout>
+        </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
