--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageView5"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="50dp"
             android:src="@drawable/user__1_"
             app:layout_constraintBottom_toTopOf="@+id/accountName_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,21 +28,19 @@
         <RelativeLayout
             android:id="@+id/widget_tracker"
             android:layout_width="match_parent"
-            android:layout_height="485dp"
-            android:layout_marginTop="250dp"
+            android:layout_height="500dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/home_dashboard_back"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView5"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintTop_toBottomOf="@+id/accountName_text">
 
             <TextView
                 android:id="@+id/acc_row1_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="35dp"
                 android:text="@string/acc_row1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 tools:visibility="visible" />
@@ -75,21 +73,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/acc_row4_label"
                 android:layout_alignStart="@+id/acc_row4_label"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginBottom="75dp"
                 android:text="@string/acc_row5"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/acc_row6_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/acc_row5_label"
-                android:layout_alignStart="@+id/acc_row5_label"
-                android:layout_marginTop="25dp"
-                android:text="@string/acc_row6"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 tools:visibility="visible" />
 
@@ -110,12 +96,13 @@
             android:id="@+id/accountName_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Jane Doe"
+            android:text="@string/acc_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
             android:typeface="sans"
+            app:layout_constraintBottom_toTopOf="@+id/widget_tracker"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
