--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -41,7 +41,8 @@
                 android:layout_centerVertical="true"
                 android:paddingStart="20dp"
                 android:src="@drawable/home_backarrow"
-                app:tint="#2B2C2E" />
+                app:tint="#2B2C2E"
+                android:contentDescription="@string/backarrow_contentDesc" />
 
             <!--Search button-->
             <ImageView
@@ -51,7 +52,8 @@
                 android:layout_centerVertical="true"
                 android:paddingEnd="20dp"
                 android:src="@drawable/home_search"
-                app:tint="#2B2C2E" />
+                app:tint="#2B2C2E"
+                android:contentDescription="@string/widget_pic_contentDesc" />
 
         </RelativeLayout>
 
@@ -82,7 +84,7 @@
                 app:cardElevation="2dp">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/LondonView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="fitStart"
@@ -98,7 +100,8 @@
                     android:text="@string/widget_heading1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textColor="#000000"
-                    android:textSize="25sp" />
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/widget_heading2"
@@ -109,8 +112,20 @@
                     android:text="@string/widget_heading2"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                     android:textColor="#000000"
-                    android:textSize="20sp">
+                    android:textSize="18sp">
                 </TextView>
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="136dp"
+                    android:layout_marginTop="60dp"
+                    android:elevation="2dp"
+                    android:focusable="true"
+                    android:text="@string/widget_checkin_button"
+                    app:cornerRadius="20dp" />
+
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
 
@@ -140,5 +155,5 @@
                     android:layout_marginBottom="80dp" />
             </RelativeLayout>
         </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
