--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -17,7 +17,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="50dp"
-            android:src="@drawable/user__1_"
+            android:src="@drawable/acc_profile"
             app:layout_constraintBottom_toTopOf="@+id/accountName_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
