--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,109 +8,106 @@
     tools:context=".HomeActivity">
 
     <!-- fragment layout -->
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#2196F3"
-        tools:context=".HomeActivity"
+        tools:context=".MainActivity"
         tools:ignore="ExtraText">
 
-        <!--Current widget title -->
-        <TextView
-            android:id="@+id/home_widget_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:text="@string/home_widget_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@id/search_bar" />
-
         <RelativeLayout
-            android:id="@+id/search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="20dp">
-
-            <!--Back arrow button-->
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:contentDescription="@string/backarrow_contentDesc"
-                android:paddingStart="20dp"
-                android:src="@drawable/home_backarrow"
-                app:tint="#2B2C2E" />
-
-            <!--Search button-->
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="@string/widget_pic_contentDesc"
-                android:paddingEnd="20dp"
-                android:src="@drawable/home_search"
-                app:tint="#040404" />
-        </RelativeLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/guide_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="200dp"
+            android:background="@drawable/home_dashboard_back"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:context=".MainActivity"
-            tools:ignore="ExtraText">
+            app:layout_constraintVertical_bias="1.0">
 
             <RelativeLayout
-                android:id="@+id/guide_background"
+                android:id="@+id/rv_background"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="220dp"
-                android:background="@drawable/home_dashboard_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintVertical_bias="1.0">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp">
 
-                <RelativeLayout
-                    android:id="@+id/rv_background"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp">
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="80dp" />
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginBottom="80dp" />
-                </RelativeLayout>
             </RelativeLayout>
 
-            <Button
-                android:id="@+id/main_widget"
-                android:layout_width="360dp"
-                android:layout_height="160dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:text="@null"
-                app:cornerRadius="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="42dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:layout_margin="5dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/guide_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/roundedImageView"
+                android:layout_width="218dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="-80dp"
+                android:background="@color/white"
+                android:scaleType="fitStart"
+                android:src="@drawable/widget_london" />
+
+            <RelativeLayout
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="20dp"
+                android:layout_marginStart="150dp"
+                >
+
+                <TextView
+                    android:id="@+id/widget_heading1"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/widget_heading1"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"></TextView>
+
+                <TextView
+                    android:id="@+id/widget_heading2"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/widget_heading1"
+                    android:layout_alignStart="@+id/widget_heading1"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:text="@string/widget_heading2"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"></TextView>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/widget_heading2"
+                    android:layout_alignStart = "@id/widget_heading2"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text="@string/widget_heading3"
+                    android:textColor="@color/black"
+                    android:textSize="20sp">
+
+                </TextView>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
 </FrameLayout>
